--- a/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.html
+++ b/src/app/pages/PropertyDetails/reverse-section/reverse-section.component.html
@@ -138,7 +138,12 @@
         </div>
       </div>
     </div>
-    <button type="button" class="check-btn" (click)="onShowConfirmModal()">
+    <button
+      type="button"
+      class="check-btn"
+      (click)="onShowConfirmModal()"
+      [disabled]="!selected?.startDate || !selected?.endDate"
+    >
       Reserve
     </button>
     <!-- If available -->
