--- a/src/app/pages/property-info/property-info.html
+++ b/src/app/pages/property-info/property-info.html
@@ -9,7 +9,7 @@
     class="property-details-box mt-2 d-flex justify-content-center justify-content-md-between flex-wrap"
   >
     <div class="d-flex flex-column align-items-center">
-      <div class="col-md-12 d-flex justify-content-center">
+      <div class="col-md-12 d-flex">
         <!-- property info, description, amenities, etc. -->
         <app-amenities-section
           [propertyId]="propertyId"
